# deterministic-trigonometry

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
examples/: trig_calculator_example.rs
src/: initialize.rs  lib.rs  utility.rs
tests/: integration_test.rs
